# schulze-rust

./: .travis.yml  Cargo.toml  README.md
src/: ballot.rs  candidate.rs  election.rs  lib.rs  nomination.rs  paths.rs  rank.rs
tests/: custom_rank.rs  example1.rs  example2.rs  example3.rs  example4.rs
tests/common/: mod.rs
