[package]
name = "schulze"
version = "0.0.1"
authors = ["Peter Gerber <peter@arbitrary.ch>"]
description = "Implementation of the Schulze method."
documentation = "https://docs.rs/schulze"
repository = "https://github.com/pgerber/schulze-rust"
keywords = ["Schulze method"]
license = "GPL-3.0+"

[dependencies]
clippy = { version = "0.0", optional = true }

[features]
unstable = ["ord_max_min"]
ord_max_min = []  # going to be stable in 2.12
